// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a subtitle. 1`] = `
<div
  class="feature__Container-sc-19zs3jp-0 hqhYty"
>
  <h2
    class="feature__SubTitle-sc-19zs3jp-2 eDOlvZ"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just the title. 1`] = `
<div
  class="feature__Container-sc-19zs3jp-0 hqhYty"
>
  <h1
    class="feature__Title-sc-19zs3jp-1 dpdDLZ"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-19zs3jp-0 hqhYty"
>
  <h1
    class="feature__Title-sc-19zs3jp-1 dpdDLZ"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-19zs3jp-2 eDOlvZ"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
